web-infras/parser/tests/fixtures/esprima/es2018/rest-property/invalid-property-after-rest/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (1,14)
1|let { a, ...b, c } = x;
 |            ^
